[project]
name = "SHARKtools_ctd_processing"
version = "1.0.0"
description = "SHARKtools plugin to process ctd data"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "profileqc @ git+https://github.com/sharksmhi/profileqc.git@11-refactor",
    "shark-tkinter-lib @ git+https://github.com/sharksmhi/shark_tkinter_lib.git",
    "ctd-processing @ git+https://github.com/sharksmhi/ctd_processing.git@3-refactor",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.'sharktools.plugins']
ctd_pre_system = 'sharktools_ctd_processing'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]


[tool.pdm]
distribution = true
