[project]
name = "SHARKtools_ctd_processing"
version = "1.0.0"
description = "SHARKtools plugin to process ctd data"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "profileqc @ git+https://github.com/sharksmhi/profileqc.git@v1.0.0",
    "ctd-processing @ git+https://github.com/sharksmhi/ctd_processing.git@v1.0.0",
    "shark-plot-lib @ git+https://github.com/sharksmhi/shark_plot_lib.git@v1.0.0",
    "SHARKtools @ git+https://github.com/sharksmhi/SHARKtools.git@v1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.'sharktools.plugins']
ctd_processing = 'sharktools_ctd_processing'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "SHARKtools @ git+https://github.com/sharksmhi/SHARKtools.git@4-refactor",
]
